# aws-role-session

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aws_role_session/: __init__.py  aws_config_parser.py  aws_role_session.py  aws_role_session_config.py
